PROJECT(libedpcrypt.so)
cmake_minimum_required(VERSION 2.8)
INSTALL(PROGRAMS libedpcrypt.so DESTINATION /usr/lib64/)
INSTALL(PROGRAMS libedpcrypt.so DESTINATION ${INSTALL_LIBDIR})

SET(LIBRSA_ENCRYPT libedpcrypt.a)
PROJECT(${LIBRSA_ENCRYPT})
cmake_minimum_required(VERSION 2.8)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include)
ADD_LIBRARY(rsa_encrypt STATIC rsa_encrypt.cc)
